[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph547lab00"
version = "0.0.1"
authors = [
  {name="Chigozie Ikechukwu", email="ikechukwuchigoziechukwuemeka@gmail.com"},
]
description = "A Python package for GOPH 547 Lab 0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/ChigozieIkechukwu/goph547-w2026-lab00-stCI"
